# classic-diagnostic-adapter

./: .bazelrc  .cargo-crap.toml  .dockerignore  .gitignore  .jscpd.json  .licenserc.yaml  .licenserc_rust.yaml  .licenserc_toml.yaml  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .rustfmt.toml  .yamlfmt  BUILD.bazel  CODESTYLE.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  MODULE.bazel  README.md  REUSE.toml  baseline.json  call_stats.py  clippy.toml  config.toml  deny.toml  gen_protos.sh  opensovd-cda-can.toml  opensovd-cda.toml  pyproject.toml  ruff.toml  rustfmt.toml  start_can_simulator.sh  start_with_can.sh
.cargo/: config.toml
.github/: CODEOWNERS
.reuse/: styles.toml
bazel/: rust_crate.bzl  workspace_status.sh
cda-build/: BUILD.bazel  Cargo.toml
cda-build/src/: lib.rs
cda-comm-can/: Cargo.toml
cda-comm-can/src/: config.rs  connection.rs  error.rs  keepalive.rs  lib.rs  multi_transport.rs
cda-comm-can/src/gateway/: background.rs  can_id.rs  connection.rs  error.rs  keepalive.rs  mod.rs  probe.rs  rediscovery.rs
cda-comm-doip/: BUILD.bazel  Cargo.toml  build.rs
cda-comm-doip/src/: comm_handle.rs  config.rs  connection_receiver.rs  connection_sender.rs  connections.rs  deferred_gateway.rs  ecu_connection.rs  error.rs  health.rs  lib.rs  socket.rs  vir_vam.rs
cda-comm-uds/: BUILD.bazel  Cargo.toml
cda-comm-uds/src/: coordinator.rs  data_transfer.rs  dtc.rs  functional_group.rs  lib.rs  query.rs  security.rs  session.rs  state_coordinator.rs  test_helpers.rs  tester_present.rs  transport.rs  types.rs  util.rs  variant.rs
cda-config/: Cargo.toml
cda-config/src/: lib.rs
cda-config/src/datatypes/: database.rs  database_naming_convention.rs  doip.rs  functional_description.rs  health.rs  logging.rs  mod.rs
cda-core/: BUILD.bazel  Cargo.toml
cda-core/src/: diag_kernel.rs  lib.rs
cda-core/src/diag_kernel/: comparam.rs  component_info.rs  diag_comm_lookup.rs  diagservices.rs  dtc.rs  ecumanager.rs  iso_14229_nrc.rs  mod.rs  operations.rs  param_metadata.rs  payload.rs  payload_decode.rs  payload_encode.rs  schema.rs  security.rs  service_lookup.rs  state.rs  variant.rs  variant_detection.rs
cda-core/src/diag_kernel/test_utils/: db_builder.rs  ecu_manager_builder.rs  mdd_type_builder.rs  mod.rs
cda-database/: BUILD.bazel  Cargo.toml  build.rs  flatbuffers-values.jsonl
cda-database/proto/: buf.yaml  file_format.proto
cda-database/src/: datatypes.rs  flatbuf.rs  lib.rs  mdd_data.rs  proto.rs
cda-database/src/datatypes/: comparam.rs  data_operation.rs  database_builder.rs  diag_coded_type.rs  dtc.rs  functional_classes.rs  jobs.rs  mod.rs  nextract_bits_perf  parameter.rs  sd_sdg.rs  service.rs  state_charts.rs  variant.rs
cda-database/src/flatbuf/: diagnostic_description.fbs  diagnostic_description.rs  mod.rs
cda-database/src/mdd_data/: files.rs  mod.rs
cda-database/src/proto/: dataformat.rs  diagnostic_description.rs  fileformat.rs  mod.rs
cda-extra/: BUILD.bazel  Cargo.toml
cda-extra/src/: lib.rs  systemd_notify.rs
cda-health/: BUILD.bazel  Cargo.toml
cda-health/src/: config.rs  lib.rs
cda-interfaces/: BUILD.bazel  Cargo.toml
cda-interfaces/src/: can_id.rs  com_param_handling.rs  communication_control.rs  datatypes.rs  diagservices.rs  ecugateway.rs  ecumanager.rs  ecuuds.rs  file_manager.rs  guard.rs  health.rs  lib.rs  schema.rs  strings.rs  transport.rs  uds.rs  util.rs
cda-interfaces/src/datatypes/: com_params.rs  component.rs  database_naming_convention.rs  execution.rs  faults.rs  flatbuf_config.rs  jobs.rs  mod.rs  networkstructure.rs  sdg.rs  semantics.rs  state.rs
cda-interfaces/src/datatypes/com_params/: mod.rs  patch.rs
cda-interfaces/src/deferred_init_api/: builder.rs  error.rs  mod.rs
cda-interfaces/src/runtime_update_api/: error.rs  mod.rs
cda-interfaces/src/storage_api/: collection.rs  error.rs  io.rs  mod.rs  storage.rs  transaction.rs
cda-main/: BUILD.bazel  Cargo.toml  build.rs
cda-main/src/: config.rs  deferred_init.rs  error.rs  lib.rs  main.rs  mdd.rs  setup.rs  storage_seed.rs  update.rs
cda-main/src/config/: com_params.rs  configfile.rs  generate.rs  mod.rs
cda-main/src/update/: mod.rs  security.rs
cda-main/tests/: resolve_com_params.rs  vendor_override_generics.rs
cda-plugin-deferred-init/: Cargo.toml
cda-plugin-deferred-init/src/: config.rs  default_deferred_init_plugin.rs  guard.rs  lib.rs
cda-plugin-google-oauth/: Cargo.toml  GOOGLE_OAUTH.md
cda-plugin-runtime-update/: BUILD.bazel  Cargo.toml
cda-plugin-runtime-update/src/: config.rs  default_runtime_reloader_plugin.rs  default_runtime_update_plugin.rs  error.rs  lib.rs  operations.rs  security.rs  storage.rs  update_guard.rs
cda-plugin-runtime-update/src/operations/: apply.rs  cleanup.rs  executions.rs  mod.rs  rollback.rs
cda-plugin-security/: BUILD.bazel  Cargo.toml
cda-plugin-security/src/: default_security_plugin.rs  lib.rs
cda-simulator/: Cargo.toml
cda-simulator/src/: config.rs  error.rs  lib.rs  main.rs
cda-simulator/src/api/: handlers.rs  mod.rs  openapi.rs  routes.rs  types.rs
cda-simulator/src/mdd/: defaults.rs  mod.rs  response_gen.rs  service_def.rs
cda-simulator/src/simulator/: handler.rs  isotp.rs  mod.rs  state.rs
cda-sovd/: BUILD.bazel  Cargo.toml
cda-sovd-interfaces/: BUILD.bazel  Cargo.toml
cda-sovd-interfaces/src/: apps.rs  components.rs  docs.rs  error.rs  functions.rs  lib.rs  locking.rs
cda-sovd-interfaces/src/components/: ecu.rs  functional_group.rs  functional_groups.rs  mod.rs
cda-sovd-interfaces/src/components/ecu/: mod.rs  modes.rs  operations.rs
cda-sovd-interfaces/src/functions/: functional_groups.rs  mod.rs
cda-sovd-interfaces/src/functions/functional_groups/: data.rs  mod.rs  modes.rs  operations.rs
cda-storage/: BUILD.bazel  Cargo.toml
cda-tracing/: BUILD.bazel  Cargo.toml
cda-transport-orchestrator/: Cargo.toml
docs/: Dockerfile  README.md  cda_trace.toml  conf.py  demo-config.toml  deviations.md  docToolchainConfig.groovy  index.adoc  index.rst  pyproject.toml  rebuild_docs.sh  requirements.txt
docs_sn/: Makefile  conf.py  (+2 more)
(+402 files in other folders)
