# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter"

[workspace]
resolver = "3"
members = [
  "cda-database",
  "cda-interfaces",
  "cda-core",
  "cda-comm-doip",
  "cda-comm-uds",
  "cda-sovd",
  "cda-sovd-interfaces",
  "cda-main",
  "cda-tracing",
]

[workspace.dependencies]
cda-interfaces = { path = "cda-interfaces" }
cda-core = { path = "cda-core" }
cda-comm-doip = { path = "cda-comm-doip" }
cda-comm-uds = { path = "cda-comm-uds" }
cda-database = { path = "cda-database" }
cda-sovd = { path = "cda-sovd" }
cda-tracing = { path = "cda-tracing" }
sovd-interfaces = { path = "cda-sovd-interfaces" }

# ensure all crates use the same version of schemars
schemars = { git = "https://github.com/theswiftfox/schemars.git", rev = "d264067" }

[workspace.lints.clippy]
# enable pedantic
pedantic = { level = "warn", priority = -1 }
## exclude some too pedantic lints for now
similar_names = "allow"

# additional lints
clone_on_ref_ptr = "warn"

[profile.release.package."*"]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
deepsize = { git = "https://github.com/theswiftfox/deepsize.git", branch = "main" }
