# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter"

[workspace]
resolver = "3"
members = [
  "cda-database",
  "cda-interfaces",
  "cda-core",
  "cda-comm-doip",
  "cda-comm-uds",
  "cda-sovd",
  "cda-sovd-interfaces",
  "cda-main",
  "cda-tracing",
]

[workspace.dependencies]
cda-interfaces = { path = "cda-interfaces" }
cda-core = { path = "cda-core" }
cda-comm-doip = { path = "cda-comm-doip" }
cda-comm-uds = { path = "cda-comm-uds" }
cda-database = { path = "cda-database" }
cda-sovd = { path = "cda-sovd" }
cda-tracing = { path = "cda-tracing" }
sovd-interfaces = { path = "cda-sovd-interfaces" }

# ---- common crates ----
hashbrown = "0.15"
num-traits = "0.2"
parking_lot = "0.12.4"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.43.0", default-features = false }
futures = "0.3"
regex = "1.11.1"
uuid = "1.16.0"
prost = "0.14"
xz2 = "0.1.6"
hex = "0.4.3"
strum = "0.27.2"
strum_macros = "0.27.2"
indexmap = "2.9.0"
http = "1.3.1"
mime = "0.3.17"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
deepsize = "0.2.0"
prost-build = "0.14.1"
ctor = "0.1.23"
reqwest = "0.12.22"
clap = "4.5"
figment = "0.10.19"
schemars = "1.0.4"
aide = "0.15.0"
doip-definitions = "3.0.13"
doip-sockets = "0.2.4"

# ---- tracing & logging crates----
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", default-features = false }
strip-ansi-escapes = "0.2.1"
nu-ansi-term = "0.50"
console-subscriber = "0.4.1"
percent-encoding = "2.3.1"

# ---- opentelemetry crates----
opentelemetry = { version = "0.30.0", default-features = false }
opentelemetry_sdk = { version = "0.30.0", default-features = false }
opentelemetry-otlp = "0.30.0"
opentelemetry-semantic-conventions = "0.30.0"

# ---- networking crates----
openssl = "0.10"
socket2 = "0.5"
tower = { version = "0.5", default-features = false }
tower-http = "0.6"

# ---- web/api crates----
axum = { version = "0.8", default-features = false }
axum-extra = "0.10.1"
serde_qs = "1.0.0-rc.3"

[workspace.lints.clippy]
# enable pedantic
pedantic = { level = "warn", priority = -1 }
## exclude some too pedantic lints for now
similar_names = "allow"

# additional lints
clone_on_ref_ptr = "warn"

[profile.release.package."*"]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
deepsize = { git = "https://github.com/theswiftfox/deepsize.git", branch = "main" }
schemars = { git = "https://github.com/theswiftfox/schemars.git", rev = "d264067" }
aide = { git = "https://github.com/theswiftfox/aide.git", rev = "e533403" }
doip-definitions = { git = "https://github.com/theswiftfox/doip-definitions.git", rev = "bdeab8c" }
doip-sockets = { git = "https://github.com/theswiftfox/doip-sockets.git", rev = "0771453" }
