# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)

[package]
name = "cda-comm-can"
version = "0.1.0"
edition.workspace = true
publish = false
description = "CAN bus communication layer used in CDA"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }
# external
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# tokio
tokio = { workspace = true, features = ["rt", "time", "sync", "io-util"] }
# logging & tracing
tracing = { workspace = true }
# utilities
hex = { workspace = true }
schemars = { workspace = true }

# CAN / ISO-TP
# `tokio-socketcan-isotp` only supports Linux (it links to `nix::net`,
# `tokio::io::unix`, and `libc::fcntl`/`O_NONBLOCK`/`SOCK_DGRAM`), so the
# dependency and all socket-using code are gated to Linux. The upstream
# crate's missing-`license`-field warning is silenced by a
# `[[licenses.exceptions]]` entry in `deny.toml`.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-socketcan-isotp = "0.2"

[features]
default = []
dlt-tracing = ["cda-interfaces/dlt-tracing"]
