# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

# cda-comm-doip: DoIP (Diagnostics over IP) communication transport.
# TLS backend is selected via //:tls_backend config flag (openssl or mbedtls).

load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "cda-comm-doip",
    srcs = glob(["src/**/*.rs"]),
    crate_features = select({
        "//:use_openssl": ["openssl"],
        "//:use_mbedtls": ["mbedtls"],
    }),
    crate_name = "cda_comm_doip",
    deps = [
        "//cda-interfaces",
        "@crate_index//:doip-codec",
        "@crate_index//:doip-definitions",
        "@crate_index//:futures",
        "@crate_index//:schemars",
        "@crate_index//:serde",
        "@crate_index//:socket2",
        "@crate_index//:thiserror",
        "@crate_index//:tokio",
        "@crate_index//:tokio-util",
        "@crate_index//:tracing",
    ] + select({
        "//:use_openssl": [
            "@crate_index//:openssl",
            "@crate_index//:tokio-openssl",
        ],
        "//:use_mbedtls": [
            "//comm-mbedtls/mbedtls-rs",
        ],
    }),
)
