# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

# cda-comm-doip: DoIP (Diagnostics over IP) communication transport.
# TLS backend is selected via //:tls_backend config flag (openssl or mbedtls).

load("//:bazel/rust_crate.bzl", "workspace_rust_library")

package(default_visibility = ["//visibility:public"])

workspace_rust_library(
    name = "cda-comm-doip",
    srcs = glob(["src/**/*.rs"]),
    crate_features = select({
        "//:use_openssl": ["openssl"],
        "//:use_mbedtls": ["mbedtls"],
    }),
    crate_name = "cda_comm_doip",
    local_deps = ["//cda-interfaces"] + select({
        "//:use_openssl": [],
        "//:use_mbedtls": [
            "//comm-mbedtls/mbedtls-rs",
        ],
    }),
)
