# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-comm-doip"
version = "0.1.0"
edition.workspace = true
publish = false
description = "DoIP communication layer used in CDA"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }
# external
hashbrown = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
# DoIP
doip-definitions = { workspace = true }
doip-sockets = { workspace = true, features = ["ssl"] }
# tls
openssl = { workspace = true }

socket2 = { workspace = true, features = ["all"] }
#tokio
tokio = { workspace = true, features = ["time", "fs", "sync"] }
# logging & tracing
tracing = { workspace = true }

[features]
default = []
openssl-vendored = ["openssl/vendored"]
