# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

# cda-comm-uds: UDS (Unified Diagnostic Services) messaging layer.

load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "cda-comm-uds",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "cda_comm_uds",
    deps = [
        "//cda-interfaces",
        "@crate_index//:futures",
        "@crate_index//:serde_json",
        "@crate_index//:socket2",
        "@crate_index//:strum",
        "@crate_index//:tokio",
        "@crate_index//:tracing",
    ],
    proc_macro_deps = [
        "@crate_index//:async-trait",
    ],
)
