# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-comm-uds"
version = "0.1.0"
edition.workspace = true
publish = false
description = "UDS communication layer used in CDA"
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }
# external
hashbrown = { version = "0.15", features = ["serde"] }

# tls
openssl = { version = "0.10", features = ["vendored"] }

socket2 = { version = "0.5", features = ["all"] }
#tokio
tokio = { version = "1.43.0", default-features = false, features = [
  "sync",
  "fs",
  "time",
  "rt",
  "io-util",
] }

serde_json = "1.0"

# logging & tracing
tracing = "0.1.41"
strum = "0.27.2"

[features]
default = []
