# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-comm-uds"
version = "0.1.0"
edition.workspace = true
publish = false
description = "UDS communication layer used in CDA"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }

# tls
openssl = { workspace = true }

socket2 = { workspace = true, features = ["all"] }
#tokio
tokio = { workspace = true, features = ["sync", "fs", "time", "rt", "io-util"] }

serde_json = { workspace = true }

# logging & tracing
tracing = { workspace = true }
strum = { workspace = true }

[features]
default = []
openssl-vendored = ["openssl/vendored"]
