# SPDX-FileCopyrightText: 2026 Copyright (c) Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0


[package]
name = "cda-config"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Configuration types, logic for loading and generating the default configuration"
homepage.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true

[lib]
path = "src/lib.rs"
