# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-core"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Diagnostic Core of CDA"
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }
cda-database = { workspace = true }
cda-plugin-security = { workspace = true }

# external
hashbrown = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

schemars = { workspace = true }

# logging & tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
default = []
