# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

# cda-database: ECU database layer for loading/querying diagnostic data (ODX/PDX).

load("//:bazel/rust_crate.bzl", "workspace_cargo_build_script", "workspace_rust_library")

package(default_visibility = ["//visibility:public"])

workspace_cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    local_deps = ["//cda-build"],
)

workspace_rust_library(
    name = "cda-database",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "cda_database",
    local_deps = [
        ":build_script",
        "//cda-interfaces",
    ],
)
