# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-database"
version = "0.1.0"
edition.workspace = true
publish = false
description = "ECU Database for CDA"
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }
# external
hashbrown = { workspace = true, features = ["serde"] }
prost = { workspace = true }
# tokio
tokio = { workspace = true, features = ["rt", "sync", "io-util", "time"] }
# v4 - Version 4 UUIDs with random data.
uuid = { workspace = true, features = ["v4"] }
xz2 = { workspace = true, features = ["static"] }

# logging
tracing = { workspace = true }

# runtime size info
deepsize = { workspace = true, features = ["hashbrown"], optional = true }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[features]
default = []
deepsize = ["dep:deepsize"]
gen-protos = []
