# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-database"
version = "0.1.0"
edition.workspace = true
publish = false
description = "ECU Database for CDA"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }
# external
prost = { workspace = true }
flatbuffers = { workspace = true }
ouroboros = { workspace = true }
# tokio
tokio = { workspace = true, features = ["rt", "sync", "io-util", "time"] }
# v4 - Version 4 UUIDs with random data.
uuid = { workspace = true, features = ["v4"] }
xz2 = { workspace = true, features = ["static"] }

# logging
tracing = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
cargo_toml = { workspace = true }
toml = { workspace = true }

[features]
default = []
gen-protos = []
gen-flatbuffers = []

# Guard the database builder, as it should not be used
# in production code because creating the database manually
# via code is cumbersome and error-prone.
# The feature primarily exists to support testing.
database-builder = []
